# gator-models

./: .flake8  README.md  pyproject.toml
.github/workflows/: format.yml  lint.yml  publish.yml
gator/models/: base_types.py  common.py  timetable.py
gator/schemas/: common.py  timetable.py
