[tool.poetry]
name = "gator-models"
version = "0.1.0"
description = "MongoDB models for Gator API"
authors = ["Shon Verch <verchshon@gmail.com>"]
packages = [
    { include = "gator" }
]

[tool.poetry.dependencies]
python = "^3.9"
flask-mongoengine = "^1.0.0"

[tool.poetry.dev-dependencies]
pydocstyle = "^6.1.1"
flake8 = "^4.0.1"
autopep8 = "^1.6.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
